# znotepro

./: .gitignore  LICENSE  README.md  build-portable.bat  build.bat  dev.bat  index.html  install.ps1  package-lock.json  package.json  tailwind.config.js  update-cli.ps1  vite.config.ts
cli/: znote.cmd  znote.js
md/: md_ref.md
search_ref/: index.rs  mod.rs  query.rs  scorer.rs  tokenizer.rs
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/search/: extractor.rs  index.rs  mod.rs  query.rs  scorer.rs  tokenizer.rs
src/components/: Editor.tsx  ModelSettingsDialog.tsx  SearchPanel.tsx  Sidebar.tsx  StyleSelectDialog.tsx  TabBar.tsx
src/hooks/: useNotes.ts
src/pages/: Home.tsx
src/types/: note.ts
styles/: apple-style.css  fluent-style.css  github-style.css  index.html  japanese-style.css  material-style.css  newspaper-style.css  notion-style.css  stripe-style.css  style-apple-minimal.html  style-fluent-glass.html  style-github-dark.html  style-google-material.html  style-japanese-cream.html  style-newspaper-classic.html  style-notion-warm.html  style-stripe-elegant.html  style-tailwind-playful.html  style-vercel-cyber.html  tailwind-style.css  vercel-style.css
