[package]
name = "znote"
version = "1.0.0"
description = "znote Pro - Windows local HTML notebook"
authors = ["znote Pro"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "znote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = { version = "2.0.0", features = [] }
tauri-plugin-cli = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
dirs = "5.0"
chrono = "0.4"
regex = "1.10"
once_cell = "1.19"
jieba-rs = { version = "0.8", features = ["default-dict"] }
unicode-segmentation = "1.10"
scraper = "0.22"
pulldown-cmark = "0.12"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = 3
