[package]
name = "znote"
version = "1.0.1"
description = "znote Pro - Windows local HTML notebook"
authors = ["znote Pro"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "znote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
dirs = "5.0"
jieba-rs = { version = "0.8", features = ["default-dict"] }
scraper = "0.22"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = 3
